--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ h6,
 
 #header .logo h1 a,
 #header .logo h1 a:hover {
-  color: #fff;
+  color: #2b2929;
   text-decoration: none;
 }
 
@@ -118,11 +118,11 @@ h6,
   font-weight: 700;
   line-height: 56px;
   text-transform: uppercase;
-  color: #fff;
+  color: #2b2929;
 }
 
 #hero h2 {
-  color: #eee;
+  color: #2b2929;
   margin-bottom: 30px;
   font-size: 24px;
 }
