--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ h6,
 #hero .countdown {
   font-size: 48px;
   font-weight: 300;
-  color: #fff;
+  color: #2b2929;
   line-height: 56px;
   margin: 30px 0 60px 0;
 }
